# Genesis

./: .gitignore  Cargo.toml  LICENSE  README.md  REPORT.md  upload.bat
src/: darwin.rs  encoder.rs  main.rs  vm.rs
visualizer/: app.js  index.html  style.css
