[package]
name = "genesis"
version = "2.1.5"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
rayon = "1.12.0"
self_update = { version = "0.44.0", features = ["rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
